@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.7.0
+VERSION=1.7.1
 
 DEPENDENCY="zeda=1.5.0;zm=1.3.0"
